--- a/build-Practica1-Desktop_Qt_5_9_0_MinGW_32bit-Debug/Makefile.Release
+++ b/build-Practica1-Desktop_Qt_5_9_0_MinGW_32bit-Debug/Makefile.Release
@@ -108,7 +108,8 @@ release/moc_predefs.h: C:/Qt/Qt5.9.0/5.9/mingw53_32/mkspecs/features/data/dummy.
 compiler_moc_header_make_all: release/moc_aereopuerto.cpp
 compiler_moc_header_clean:
 	-$(DEL_FILE) release\moc_aereopuerto.cpp
-release/moc_aereopuerto.cpp: C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QMainWindow \
+release/moc_aereopuerto.cpp: ../Practica1/elementos.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QMainWindow \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qmainwindow.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qtwidgetsglobal.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qtguiglobal.h \
@@ -238,6 +239,7 @@ compiler_clean: compiler_moc_predefs_clean compiler_moc_header_clean compiler_ui
 ####### Compile
 
 release/main.o: ../Practica1/main.cpp ../Practica1/aereopuerto.h \
+		../Practica1/elementos.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QMainWindow \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qmainwindow.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qtwidgetsglobal.h \
@@ -351,6 +353,7 @@ release/main.o: ../Practica1/main.cpp ../Practica1/aereopuerto.h \
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\main.o ..\Practica1\main.cpp
 
 release/aereopuerto.o: ../Practica1/aereopuerto.cpp ../Practica1/aereopuerto.h \
+		../Practica1/elementos.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QMainWindow \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qmainwindow.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qtwidgetsglobal.h \
@@ -454,7 +457,53 @@ release/aereopuerto.o: ../Practica1/aereopuerto.cpp ../Practica1/aereopuerto.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qtouchdevice.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qtabwidget.h \
 		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qicon.h \
-		ui_aereopuerto.h
+		ui_aereopuerto.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtCore/QVariant \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QAction \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qaction.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qactiongroup.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QApplication \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qapplication.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtCore/qcoreapplication.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtCore/qeventloop.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qdesktopwidget.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qguiapplication.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qinputmethod.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QButtonGroup \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qbuttongroup.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QGroupBox \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qgroupbox.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qframe.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QHeaderView \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qheaderview.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qabstractitemview.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qabstractscrollarea.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtCore/qabstractitemmodel.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtCore/qitemselectionmodel.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qabstractitemdelegate.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qstyleoption.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qabstractspinbox.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qvalidator.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtCore/qregularexpression.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qslider.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qabstractslider.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qstyle.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qtabbar.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qrubberband.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QLabel \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qlabel.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QLineEdit \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qlineedit.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qtextcursor.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qtextformat.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qpen.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtGui/qtextoption.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QPushButton \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qpushbutton.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qabstractbutton.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QStatusBar \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/qstatusbar.h \
+		C:/Qt/Qt5.9.0/5.9/mingw53_32/include/QtWidgets/QWidget
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\aereopuerto.o ..\Practica1\aereopuerto.cpp
 
 release/elementos.o: ../Practica1/elementos.cpp ../Practica1/elementos.h
