--- a/Proyecto_fase1/GameClient/GameClient/Web.config
+++ b/Proyecto_fase1/GameClient/GameClient/Web.config
@@ -18,4 +18,16 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="Proyecto EDDSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost/webServerNW/NavalwarService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="Proyecto EDDSoap"
+        contract="webServerNW.ProyectoEDDSoap" name="Proyecto EDDSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
